05/02/2026
Fixed issues with clunky Animation and KeyHandling
Added more Padding to MenuLabel
Removed some unused Code and formatted some